Fix gaps

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -303,16 +303,14 @@ li {
     transform: rotate(45deg);
 }
 
-div {
-	.big-gap {
-		height: 1.5rem;
-	}
+.big-gap {
+	height: 1.5rem;
+}
 
-	.medium-gap {
-		height: 1.125rem;
-	}
+.medium-gap {
+	height: 1.125rem;
+}
 
-	.small-gap {
-		height: 0.75rem;
-	}
+.small-gap {
+	height: 0.75rem;
 }
